samples/_failures_safe/1761155921_b16d8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8c22532.c: In function ‘main’:
./samples/SAFE/__tmp_a8c22532.c:145:5: error: expected declaration or statement at end of input
  145 |     return 0;
      |     ^~~~~~
